fix(profile section and active sidebar) minor alignment and font weight fixes

--- a/style/layout/_header.scss
+++ b/style/layout/_header.scss
@@ -91,4 +91,7 @@
       @include flexbox(center, center);
     }
   }
+  &__dropdown {
+    @include flexbox(center, center);
+  }
 }
